Author changes and reformat
Changes authors on pages to UNK biology. Changed intro to have everyone who has worked or contributed as an author. Simplified language in some pages; removed usage of curl package as tidyverse read_csv replaces its functionality.

--- a/chi.qmd
+++ b/chi.qmd
@@ -1,6 +1,6 @@
 ---
 title: "χ2 (Chi-squared) tests"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
