--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Descriptive Statistics"
-author: "Dr. Jacob C. Cooper and Caleb Rother"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
