--- a/anova1.qmd
+++ b/anova1.qmd
@@ -1,6 +1,6 @@
 ---
 title: "ANOVA: Part 1"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
