--- a/anova2.qmd
+++ b/anova2.qmd
@@ -1,6 +1,6 @@
 ---
 title: "ANOVA: Part 2"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
