--- a/cor_reg.qmd
+++ b/cor_reg.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Correlation & regression"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
