--- a/picktest.qmd
+++ b/picktest.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Pick the test"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
