--- a/probdist.qmd
+++ b/probdist.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Probability distributions"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
