--- a/ttest.qmd
+++ b/ttest.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Testing means with $t$-tests"
-author: "Dr. Jacob C. Cooper"
+author: "University of Nebraska at Kearney Biology"
 format: html
 editor: visual
 ---
