--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -7,7 +7,9 @@ editor: visual
 
 ## Purposes of descriptive statistics
 
-Descriptive statistics enable researchers to quickly and easily examine the "behavior" of their datasets, identifying potential errors and allowing them to observe particular trends that may be worth further analysis. Here, we will cover how to calculate descriptive statistics for multiple different datasets, culminating in an assignment covering these topics.
+Descriptive statistics allow us to quickly get an idea of how our datasets are "behaving". This allows us to identify potential errors, trends, or particular outliers for further analysis. While you are likely familiar with many of the calculations we will go over, these remain powerful calculations for initial analysis. In this page, we will go over how to complete these calculations in *R*. You will then complete an assignment based on these topics.
+
+------------------------------------------------------------------------
 
 ## Preparing *R*
 
@@ -18,6 +20,8 @@ As with every week, we will need to load our relevant packages first. This week,
 library(tidyverse)
 ```
 
+------------------------------------------------------------------------
+
 ## Downloading the data
 
 For the example this week, we will be using the `starbucks` dataset, describing the number of drinks purchased during particular time periods during the day.
@@ -25,6 +29,8 @@ For the example this week, we will be using the `starbucks` dataset, describing 
 ```{r}
 starbucks <- read_csv("https://raw.githubusercontent.com/jacobccooper/biol105_unk/main/datasets/starbucks.csv")
 ```
+
+------------------------------------------------------------------------
 
 ## Descriptive statistics
 
@@ -36,7 +42,13 @@ Descriptive statistics are statistics that help us understand the shape and natu
 
 Using the `starbucks` dataset, we can look at some of these descriptive statistics to understand what is going on.
 
+------------------------------------------------------------------------
+
 ### Notation
+
+<details>
+
+<summary>Click to see notion information</summary>
 
 As a quick reminder, we use Greek lettering for *populations* and Roman lettering for samples. For example:
 
@@ -44,7 +56,15 @@ As a quick reminder, we use Greek lettering for *populations* and Roman letterin
 
 -   $\mu$ is a population, but $\bar{x}$ is a sample (both of these variables refer to the *mean*).
 
+</details>
+
+------------------------------------------------------------------------
+
 ### Mean
+
+<details>
+
+<summary>Click to see how to calculate mean</summary>
 
 The mean is the "average" value within a set of data, specifically, the sum of all values divided by the length of those values: $\frac{\sum_{i=1}^nx}{n}$.
 
@@ -82,7 +102,15 @@ We already covered calculating the average manually in our previous tutorial, bu
 round(sum(fraps)/length(fraps),0)
 ```
 
+</details>
+
+------------------------------------------------------------------------
+
 ### Range
+
+<details>
+
+<summary>Click to see how to calculate range</summary>
 
 The range is the difference between the largest and smallest units in a dataset. We can use the commands `min` and `max` to calculate this.
 
@@ -92,7 +120,15 @@ max(fraps) - min(fraps)
 
 The range of our dataset is 13.
 
+</details>
+
+------------------------------------------------------------------------
+
 ### Median
+
+<details>
+
+<summary>Click to see how to calculate the median</summary>
 
 The median is also known as the 50th percentile, and is the midpoint of the data when ordered from least to greatest. If there are an even number of data points, then it is the average point between the two center points. For odd data, this is the $\frac{n+1}{2}$th observation. For even data, since we need to take an average, this is the $\frac{\frac{n}{2}+(\frac{n}{2}+1)}{2}$. You should be able to do these by hand and by using a program.
 
@@ -165,7 +201,15 @@ med
 
 As we can see, these values are equal!
 
+</details>
+
+------------------------------------------------------------------------
+
 ### Other quartiles and quantiles
+
+<details>
+
+<summary>Click to see how to find quartiles and quantiles</summary>
 
 We also use the 25th percentile and the 75th percentile to understand data distributions. These are calculated similar to the above, but the bottom quartile is only $\frac{1}{4}$ of the way between values and the 75th quartile is $\frac{3}{4}$ of the way between values. We can use the *R* function `quantile` to calculate these.
 
@@ -227,6 +271,10 @@ Now we have the same answer as we calculated by hand!
 This is a classic example of how things in *R* (and in statistics in general!) can depend on interpretation and are not always "hard and fast" rules.
 
 **In this class, we will be using Type 6 interpretation for the quantiles - you will have to specify this in the quantile function EVERY TIME!** If you do *not* specify Type 6, you will get the questions incorrect and you will get answers that do not agree with the book, with Excel, or what you calculate by hand.
+
+</details>
+
+------------------------------------------------------------------------
 
 ### Mode
 
@@ -296,13 +344,13 @@ This allows you to find how many arguments match your condition quickly, and eve
 
 -   `!`: not, so "not equal to" would be `!=`.
 
-    </details>
-
-    <details>
-
-    <summary>Click to see DescTools method</summary>
+</details>
 
 However, the library *DescTools* has many missing basic statistical functions, including **Mode()**. Use this method in your code to reduce clutter and make the code run faster.
+
+<details>
+
+<summary>Click to see DescTools method</summary>
 
 ```{r}
 #Load the package
@@ -328,7 +376,13 @@ If there are two or more modes, these numbers will also appear in the first line
 
 </details>
 
+------------------------------------------------------------------------
+
 ### Variance
+
+<details>
+
+<summary>Click to see how to calculate variance</summary>
 
 When we are dealing with datasets, the variance is a measure of the total spread of the data. The variance is calculated using the following:
 
@@ -387,7 +441,15 @@ var_frap == var(frap_order)
 
 Seeing as this is `TRUE`, we calculated it correctly.
 
+</details>
+
+------------------------------------------------------------------------
+
 ### Standard deviation
+
+<details>
+
+<summary>Click to see how to calculate standard deviation</summary>
 
 Another common measurement of spread is the standard deviation ($\sigma$). As you remember from class (or may have guessed from the notation on this site), the standard deviation is just the square root of the variance.
 
@@ -409,7 +471,15 @@ sqrt(var_frap) == sd(frap_order)
 
 As you can see, we calculated this correctly!
 
+</details>
+
+------------------------------------------------------------------------
+
 ### Standard error
+
+<details>
+
+<summary>Click to see how to calculate standard error</summary>
 
 The standard error is used to help understand the spread of data and to help estimate the accuracy of our measurements for things like the mean. The standard error is calculated thusly:
 
@@ -423,9 +493,17 @@ There is not a built in function for standard error in *R*, but we can use *Desc
 MeanSE(frap_order) #This is from DescTools!
 ```
 
+</details>
+
 **Remember**, the standard error is used to help reflect our *confidence* in a specific measurement (*e.g.*, how certain we are of the mean, and what values we believe the mean falls between). We want our estimates to be as precise as possible with as little uncertainty as possible. Given this, does having more samples make our estimates more or less confident? Mathematically, what happens as our sample size *increases*?
 
+------------------------------------------------------------------------
+
 ### Coefficient of variation
+
+<details>
+
+<summary>Click to see how to calculate coefficient of variation</summary>
 
 The coefficient of variation, another measure of data spread and location, is calculated by the following:
 
@@ -454,6 +532,10 @@ However, we can also complete this with a *DescTools* function.
 (CoefVar(frap_order)*100) |> 
   round(2)
 ```
+
+</details>
+
+------------------------------------------------------------------------
 
 ### Outliers
 
@@ -520,9 +602,13 @@ Again, there are no outliers as this code is effectively the same. If there are,
 
 </details>
 
+------------------------------------------------------------------------
+
 ## Homework: Descriptive Statistics
 
 Now that we've covered these basic statistics, it's your turn! For this week, you will be completing homework that involves methods from Chapter 4 in your book.
+
+------------------------------------------------------------------------
 
 ### Homework instructions
 
@@ -548,7 +634,13 @@ Please create an *RMarkdown* document that will render as an `.html` file. You w
 
 **Please show all of your work for full credit.**
 
+------------------------------------------------------------------------
+
 ### Data for homework problems
+
+<details>
+
+<summary>Click for homework data</summary>
 
 For each question, calculate the mean, median, range, interquartile range, variance, standard deviation, coefficient of variation, standard error, and whether there are any "outliers".
 
@@ -618,3 +710,5 @@ dim(ages)
 As you can see, this file has only two columns but 17,150 rows! For the column `time_difference`, please calculate the mean, median, range, interquartile range, variance, standard deviation, coefficient of variation, standard error, and whether there are any "outliers".
 
 **Synthesis question**: Folks will often think about probabilities of events being "low but never zero". What does that mean in the context of these data? What about these data make you feel like probabilities may decrease through time but never become zero?
+
+</details>
